Add gems for errors and simple_form

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,6 +1,8 @@
 <h2>Welcome to Flight Booker</h2>
 
-<%= form_with url: root_path, method: :get do |form| %>
-  <%= form.select(:origin_id, options_for_select(@airport_options)) %>
-  <%= form.submit "Search" %>
-<% end %>
+<div>
+  <%= form_with url: root_path, method: :get do |form| %>
+    <%= form.select(:origin_id, options_for_select(@airport_options)) %>
+    <%= form.submit "Search" %>
+  <% end %>
+</div>
