--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,14 +1,22 @@
 <h2>Welcome to Flight Booker</h2>
 
 <div>
-  <%= form_with url: root_path, method: :get do |form| %>
+  <%= form_with url: 'flights', method: :get do |form| %>
     <%= form.label :origin_id, "From?" %>
-    <%= form.select :origin_id, options_for_select(@airport_options) %>
+    <%= form.select :origin_id, @airport_options %>
     <%= form.label :destination_id, "To?" %>
-    <%= form.select :destination_id, options_for_select(@airport_options) %>
+    <%= form.select :destination_id, @airport_options %>
     <%= form.label :number_of_passengers, "Number of passengers?" %>
     <%= form.select :number_of_passengers, [1..4] %>
-    
+    <%= form.label :departure_time, "Departure date?" %>
+    <%= form.select :departure_time, @date_options %>
     <%= form.submit "Search" %>
   <% end %>
 </div>
+
+<div>
+  <%= @matching_flights.each do |flight| %>
+    <%= render partial: 'flight', locals: {flight: flight} %>
+  <% end %>
+</div>
+
