--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,22 +1,41 @@
-<h2>Welcome to Flight Booker</h2>
+<div class="flex flex-col gap-6 mt-12 mx-6">
+  <div class="flex flex-col border-2 border-black border-solid rounded-2xl bg-olive shadow w-min">
+    <div class="text-xl text-white bg-purple p-4 rounded-2xl rounded-b-none border-b-dark border-b">Search for a flight:</div>
 
-<div>
-  <%= form_with url: 'flights', method: :get do |form| %>
-    <%= form.label :origin_id, "From?" %>
-    <%= form.select :origin_id, @airport_options %>
-    <%= form.label :destination_id, "To?" %>
-    <%= form.select :destination_id, @airport_options %>
-    <%= form.label :number_of_passengers, "Number of passengers?" %>
-    <%= form.select :number_of_passengers, [1..4] %>
-    <%= form.label :departure_time, "Departure date?" %>
-    <%= form.select :departure_time, @date_options %>
-    <%= form.submit "Search" %>
-  <% end %>
+    <%= form_with url: 'flights', method: :get do |form| %>
+      <div class="flex justify-start items-end gap-5 px-6 py-3">
+        <div>
+          <div class="mb-2"><%= form.label :origin_id, "From?" %></div>
+          <div><%= form.select :origin_id, @airport_options %></div>
+        </div>
+        <div>
+          <div class="mb-2"><%= form.label :destination_id, "To?" %></div>
+          <div><%= form.select :destination_id, @airport_options %></div>
+        </div>
+        <div class="w-24">
+          <div class="mb-2"><%= form.label :number_of_passengers, "Number of passengers?" %></div>
+          <div><%= form.select :number_of_passengers, [1..4] %></div>
+        </div>
+        <div>
+          <div class="mb-2"><%= form.label :departure_time, "Departure date?" %></div>
+          <div><%= form.select :departure_time, @date_options %></div>
+        </div>
+        <div class=" bg-red w-fit py-2 px-4 rounded-xl text-white border-dark border-2 bg-lavender">
+          <%= form.submit "Search" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="flex flex-col border-2 border-black border-solid rounded-2xl bg-olive shadow">
+    <div class="text-xl text-white bg-purple p-4 rounded-2xl rounded-b-none border-b-dark border-b self-stretch">
+      <%= "Flights from #{@search[:origin]} to #{@search[:destination]} on #{@search[:date]}" %>
+    </div>
+    <div class="flex flex-col">
+      <% @matching_flights.each do |flight| %>
+        <%= render partial: 'flight', locals: {flight: flight} %>
+      <% end %>
+    </div>
+
+  </div>
 </div>
-
-<div>
-  <%= @matching_flights.each do |flight| %>
-    <%= render partial: 'flight', locals: {flight: flight} %>
-  <% end %>
-</div>
-
