--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,7 @@
   <body>
     <main class="flex flex-col bg-dark h-screen">
       <%= render 'layouts/header' %>
-      <%= yield %>
-      <div class="flex-grow"></div>
+      <div class="flex justify-center"><%= yield %><div>
     </main>
   </body>
 </html>
