--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -14,7 +14,7 @@
         </div>
         <div class="w-24">
           <div class="mb-2"><%= form.label :number_of_passengers, "Number of passengers?" %></div>
-          <div><%= form.select :number_of_passengers, [1..4] %></div>
+          <div><%= form.select :number_of_passengers, 1..4 %></div>
         </div>
         <div>
           <div class="mb-2"><%= form.label :departure_time, "Departure date?" %></div>
