--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,19 @@
-<div class="flex flex-col items-center gap-6 mt-12 mx-6 w-full">
-  <div class="flex flex-col border-2 border-black border-solid rounded-2xl bg-olive shadow">
+<div class="flex flex-col items-center gap-6 w-full">
+  <div class="bg-red-300 w-screen text-center p-2">
+    <% if @booking.errors.any? %>
+      <% @booking.passengers.each do |passenger| %>
+        <% passenger.errors.full_messages.each do |message| %>
+          <h3>Passenger's <%= message.downcase %></h3>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
+
+  <div class="flex flex-col border-2 border-black border-solid rounded-2xl bg-olive shadow mt-12">
     <div class="text-xl text-white bg-purple p-4 rounded-2xl rounded-b-none border-b-dark border-b">Your Booking</div>
-      <%= form_with model: @booking, method: :get do |form| %>
-        <div class="flex flex-col justify-start gap-5 px-6 py-3">
+      <%= form_with model: @booking, method: :post do |form| %>
+        <div class="flex flex-col items-center gap-5 px-6 py-3">
+          <%= form.hidden_field :flight_id, value: @booking.flight_id %>
           <div>Flight #<%= @booking.flight_id %></div>
           <div>Departure Date: <%= @booking.flight.departure_date_formatted %></div>
           <div>
@@ -20,9 +31,10 @@
               <%= passenger_form.hidden_field :flight_id, value: @booking.flight_id %>
             </div>
           <% end %>
-          <div><%= form.submit %></div>
+          <div class="btn self-end"><%= form.submit %></div>
         </div>
       <% end %>
     </div>
   </div>
+</div>
 </div>
