--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,1 +1,15 @@
-<div>Let's see if this works</div>
+<div class="flex justify-center w-screen">
+  <div class="flex flex-col gap-6 mt-12 w-min">
+    <div class="flex flex-col border-2 border-black border-solid rounded-2xl bg-olive shadow w-max ">
+      <div class="text-xl text-white bg-purple p-4 rounded-2xl rounded-b-none border-b-dark border-b">Your Booking</div>
+        <div class="flex flex-col items-center gap-5 px-6 py-3">
+          <%= render partial: "details", locals: { booking: @booking } %>
+          <div class="underline -mb-4">Passengers</div>
+          <% @booking.passengers.each do |passenger| %>
+            <div class="self-start"><%= passenger.name %> 
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
