--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,8 @@
-<div class="bg-maroon mx-0 h-16 flex flex-row items-center ">
-  <div class="pl-6"><svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path fill="#ffffff" d="M5.9 42.2v-3.4h36.45v3.4Zm3.25-10.35L3.8 22.7l2.5-.5 3.5 3.1 10.95-2.95L12.2 8l3.25-.95L29.7 19.9l10.7-2.85q1.45-.4 2.65.525t1.2 2.475q0 1-.625 1.825T42 22.95Z"/></svg></div>
-  <h1 class="px-3 text-white font-bold text-2xl tracking-wider">Alpha Airlines Flight Booker</h1>
+<div class="bg-maroon mx-0 h-16 flex flex-row items-center justify-between px-6">
+  <div class="flex items-center">
+    <svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path fill="#ffffff" d="M5.9 42.2v-3.4h36.45v3.4Zm3.25-10.35L3.8 22.7l2.5-.5 3.5 3.1 10.95-2.95L12.2 8l3.25-.95L29.7 19.9l10.7-2.85q1.45-.4 2.65.525t1.2 2.475q0 1-.625 1.825T42 22.95Z"/></svg>
+    <h1 class="px-3 text-white font-bold text-2xl tracking-wider">Alpha Airlines Flight Booker</h1>
+  </div>
+  <div class="btn"><%= button_to "Find a flight", flights_path, method: :get %></div>
 </div>
 
