Finish bookings feature spec

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -44,7 +44,7 @@
               <% end %>
               <div class="flex justify-end">
                 <div class="btn my-3 mr-3">
-                  <%= form.submit "Book flight" %>
+                  <%= form.submit "Book Flight" %>
                 </div>
               </div>
             <% end %>
