Small edits to tailwind.css

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,14 +4,15 @@
 
 @layer components {
   .btn {
-    @apply py-2 px-4 rounded-xl text-white border-dark border-2 bg-lavender hover:bg-purple hover:shadow active:outline-none active:ring active:ring-rose-900 ;
+    @apply py-2 px-4 rounded-xl text-white border-dark border-2 bg-lavender hover:bg-purple hover:shadow active:outline-none active:ring active:ring-rose-900;
   }
 }
 
 @layer base {
   h1 {
     @apply font-heading
-  },
+  }
+  
   .field_with_errors {
     @apply bg-red-500 text-lg;
   }
