Add booking link to email templates

--- a/app/views/passenger_mailer/confirmation_email.html.erb
+++ b/app/views/passenger_mailer/confirmation_email.html.erb
@@ -21,5 +21,6 @@
         <% end %>
       </div>
 
-      <div>To view or modify your booking, visit our website: <%= @booking_url %></div>
+      <div>To view or modify your booking, visit our website:</div>
+      <%= link_to 'Your Booking', @booking %>
     </body>
