Add mailer specs for confirmation email

--- a/app/views/passenger_mailer/confirmation_email.html.erb
+++ b/app/views/passenger_mailer/confirmation_email.html.erb
@@ -22,5 +22,5 @@
       </div>
 
       <div>To view or modify your booking, visit our website:</div>
-      <%= link_to 'Your Booking', @booking %>
+      <%= link_to 'Your Booking,' @url %>
     </body>
